--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -11,9 +11,140 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing data/wind_raw/ballyhaise_cavan_monthly.csv...\n",
+      "  Saved 244 rows to data/wind_clean/ballyhaise_wind_data.csv\n",
+      "Processing data/wind_raw/dunsany_meath_monthly.csv...\n",
+      "  Saved 226 rows to data/wind_clean/dunsany_wind_data.csv\n",
+      "Processing data/wind_raw/knock_airport_mayo_monthly.csv...\n",
+      "  Saved 341 rows to data/wind_clean/knock_airport_wind_data.csv\n",
+      "Processing data/wind_raw/oak_park_carlow_monthly.csv...\n",
+      "  Saved 249 rows to data/wind_clean/oak_park_wind_data.csv\n",
+      "Processing data/wind_raw/shannon_airport_clare_monthly.csv...\n",
+      "  Saved 955 rows to data/wind_clean/shannon_airport_wind_data.csv\n",
+      "\n",
+      "BALLYHAISE:\n",
+      "count    244.000000\n",
+      "mean       6.404098\n",
+      "std        1.271136\n",
+      "min        3.300000\n",
+      "25%        5.500000\n",
+      "50%        6.200000\n",
+      "75%        7.200000\n",
+      "max       10.400000\n",
+      "Name: wdsp, dtype: float64\n",
+      "\n",
+      "DUNSANY:\n",
+      "count    226.000000\n",
+      "mean       7.935841\n",
+      "std        1.501317\n",
+      "min        4.400000\n",
+      "25%        6.925000\n",
+      "50%        7.600000\n",
+      "75%        8.875000\n",
+      "max       13.000000\n",
+      "Name: wdsp, dtype: float64\n",
+      "\n",
+      "KNOCK AIRPORT:\n",
+      "count    341.000000\n",
+      "mean       9.451906\n",
+      "std        1.509530\n",
+      "min        6.100000\n",
+      "25%        8.400000\n",
+      "50%        9.200000\n",
+      "75%       10.300000\n",
+      "max       15.000000\n",
+      "Name: wdsp, dtype: float64\n",
+      "\n",
+      "OAK PARK:\n",
+      "count    249.000000\n",
+      "mean       7.395984\n",
+      "std        1.426105\n",
+      "min        4.200000\n",
+      "25%        6.400000\n",
+      "50%        7.200000\n",
+      "75%        8.200000\n",
+      "max       12.900000\n",
+      "Name: wdsp, dtype: float64\n",
+      "\n",
+      "SHANNON AIRPORT:\n",
+      "count    955.000000\n",
+      "mean       9.611623\n",
+      "std        1.915621\n",
+      "min        4.700000\n",
+      "25%        8.200000\n",
+      "50%        9.400000\n",
+      "75%       10.800000\n",
+      "max       21.700000\n",
+      "Name: wdsp, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "def clean_wind_data(filename):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "    station_name = lines[0].replace('Station Name:', '').strip()\n",
+    "    header_line = 0\n",
+    "\n",
+    "    for i, line in enumerate(lines):\n",
+    "        if line.startswith('year,month,meant'):\n",
+    "            header_line = i\n",
+    "            break\n",
+    "    header = lines[header_line].strip().split(',')\n",
+    "    data_rows = []\n",
+    "    for line in lines[header_line+1:]:\n",
+    "        if line.strip():\n",
+    "            data_rows.append(line.strip().split(','))\n",
+    "\n",
+    "    df = pd.DataFrame(data_rows, columns=header)\n",
+    "    df['station'] = station_name\n",
+    "    df['wdsp'] = pd.to_numeric(df['wdsp'], errors='coerce')\n",
+    "    df = df[['station', 'year', 'month', 'wdsp']]\n",
+    "    df = df.dropna(subset=['wdsp'])\n",
+    "\n",
+    "    return df, station_name\n",
+    "\n",
+    "def process_files_separately(file_list):\n",
+    "    os.makedirs('data/wind_clean', exist_ok=True)\n",
+    "\n",
+    "    all_dfs = {}\n",
+    "    for file in file_list:\n",
+    "        try:\n",
+    "            print(f\"Processing {file}...\")\n",
+    "            df, station_name = clean_wind_data(file)\n",
+    "            clean_name = station_name.lower().replace(' ', '_')\n",
+    "            output_file = f\"data/wind_clean/{clean_name}_wind_data.csv\"\n",
+    "            df.to_csv(output_file, index=False)\n",
+    "            print(f\"  Saved {len(df)} rows to {output_file}\")\n",
+    "            all_dfs[station_name] = df\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing {file}: {str(e)}\")\n",
+    "\n",
+    "    return all_dfs\n",
+    "\n",
+    "files = [\n",
+    "    'data/wind_raw/ballyhaise_cavan_monthly.csv',\n",
+    "    'data/wind_raw/dunsany_meath_monthly.csv',\n",
+    "    'data/wind_raw/knock_airport_mayo_monthly.csv',\n",
+    "    'data/wind_raw/oak_park_carlow_monthly.csv',\n",
+    "    'data/wind_raw/shannon_airport_clare_monthly.csv',\n",
+    "]\n",
+    "\n",
+    "all_station_data = process_files_separately(files)\n",
+    "if all_station_data:\n",
+    "    for station_name, df in all_station_data.items():\n",
+    "        stats = df['wdsp'].describe()\n",
+    "        print(f\"\\n{station_name}:\")\n",
+    "        print(stats)"
    ]
   },
   {
@@ -23,8 +154,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
