add comments to ipynb

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first need to format and clean the data."
+    "We first need to format and clean the data. Here we get simplfiy the files by separating them out into files and dropping all missing speeds."
    ]
   },
   {
