add wind rosees + dir

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -426,6 +426,290 @@
     "results_df.to_csv('results/weibull_analysis_results.csv', index=False)\n",
     "print(\"\\nResults saved to 'results/weibull_analysis_results.csv'\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok now, I want to get the average direction of the wind over the course of the month - we'll need the hourly data to augment this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing data/wind_raw/wind_hourly_direction/shannon_airport_clare_hourly.csv...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:22: DtypeWarning: Columns (6,12,14,15,16,18,19,20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(filename, skiprows=header_line)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Saved 956 monthly averages to data/wind_direction/shannon_airport_wind_direction.csv\n",
+      "Processing data/wind_raw/wind_hourly_direction/ballyhaise_cavan_hourly.csv...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:22: DtypeWarning: Columns (2,4,10,12,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(filename, skiprows=header_line)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Saved 259 monthly averages to data/wind_direction/ballyhaise_wind_direction.csv\n",
+      "Processing data/wind_raw/wind_hourly_direction/dunsany_meath_hourly.csv...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:22: DtypeWarning: Columns (2,4,6,7,8,9,10,12,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(filename, skiprows=header_line)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Saved 228 monthly averages to data/wind_direction/dunsany_wind_direction.csv\n",
+      "Processing data/wind_raw/wind_hourly_direction/oak_park_carlow_hourly.csv...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:22: DtypeWarning: Columns (2,4,6,7,8,9,10,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(filename, skiprows=header_line)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Saved 261 monthly averages to data/wind_direction/oak_park_wind_direction.csv\n",
+      "Processing data/wind_raw/wind_hourly_direction/knock_airport_mayo_hourly.csv...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:22: DtypeWarning: Columns (2,10,12,14,15,16,18,19,20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(filename, skiprows=header_line)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Saved 347 monthly averages to data/wind_direction/knock_airport_wind_direction.csv\n",
+      "\n",
+      "SHANNON AIRPORT Average Wind Direction:\n",
+      "Overall average direction: 226.9° (SW)\n",
+      "\n",
+      "Seasonal Average Directions:\n",
+      "Autumn: 212.1° (SSW)\n",
+      "Spring: 233.2° (SW)\n",
+      "Summer: 258.0° (WSW)\n",
+      "Winter: 194.0° (SSW)\n",
+      "\n",
+      "BALLYHAISE Average Wind Direction:\n",
+      "Overall average direction: 216.7° (SW)\n",
+      "\n",
+      "Seasonal Average Directions:\n",
+      "Autumn: 212.9° (SSW)\n",
+      "Spring: 202.5° (SSW)\n",
+      "Summer: 232.5° (SW)\n",
+      "Winter: 215.8° (SW)\n",
+      "\n",
+      "DUNSANY Average Wind Direction:\n",
+      "Overall average direction: 218.5° (SW)\n",
+      "\n",
+      "Seasonal Average Directions:\n",
+      "Autumn: 216.7° (SW)\n",
+      "Spring: 202.6° (SSW)\n",
+      "Summer: 230.7° (SW)\n",
+      "Winter: 218.3° (SW)\n",
+      "\n",
+      "OAK PARK Average Wind Direction:\n",
+      "Overall average direction: 222.9° (SW)\n",
+      "\n",
+      "Seasonal Average Directions:\n",
+      "Autumn: 219.2° (SW)\n",
+      "Spring: 217.3° (SW)\n",
+      "Summer: 238.8° (WSW)\n",
+      "Winter: 215.1° (SW)\n",
+      "\n",
+      "KNOCK AIRPORT Average Wind Direction:\n",
+      "Overall average direction: 221.2° (SW)\n",
+      "\n",
+      "Seasonal Average Directions:\n",
+      "Autumn: 215.4° (SW)\n",
+      "Spring: 211.9° (SSW)\n",
+      "Summer: 246.6° (WSW)\n",
+      "Winter: 210.1° (SSW)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:154: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  seasonal_avgs = df.groupby('season').apply(\n",
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:154: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  seasonal_avgs = df.groupby('season').apply(\n",
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:154: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  seasonal_avgs = df.groupby('season').apply(\n",
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:154: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  seasonal_avgs = df.groupby('season').apply(\n",
+      "/var/folders/mt/1gftgz793ss6lh4yzly9sf300000gn/T/ipykernel_57781/2291194499.py:154: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  seasonal_avgs = df.groupby('season').apply(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def clean_hourly_wind_direction_data(filename):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "    station_name = lines[0].replace('Station Name:', '').strip()\n",
+    "    header_line = 0\n",
+    "    for i, line in enumerate(lines):\n",
+    "        if line.startswith('date,ind,rain'):\n",
+    "            header_line = i\n",
+    "            break\n",
+    "    df = pd.read_csv(filename, skiprows=header_line)\n",
+    "    df['station'] = station_name\n",
+    "    df['wddir'] = pd.to_numeric(df['wddir'], errors='coerce')\n",
+    "    df['wdsp'] = pd.to_numeric(df['wdsp'], errors='coerce')\n",
+    "    df['wdsp_ms'] = df['wdsp'] * 0.514444\n",
+    "    df['date'] = pd.to_datetime(df['date'], format='%d-%b-%Y %H:%M', errors='coerce')\n",
+    "    df['year'] = df['date'].dt.year\n",
+    "    df['month'] = df['date'].dt.month\n",
+    "    df = df[['station', 'date', 'year', 'month', 'wdsp', 'wdsp_ms', 'wddir']]\n",
+    "    df = df.dropna(subset=['wddir'])\n",
+    "\n",
+    "    return df, station_name\n",
+    "\n",
+    "def average_wind_direction(directions):\n",
+    "    radians = np.deg2rad(directions)\n",
+    "    sin_mean = np.mean(np.sin(radians))\n",
+    "    cos_mean = np.mean(np.cos(radians))\n",
+    "    avg_dir_rad = np.arctan2(sin_mean, cos_mean)\n",
+    "    avg_dir_deg = np.rad2deg(avg_dir_rad)\n",
+    "    avg_dir_deg = (avg_dir_deg + 360) % 360\n",
+    "\n",
+    "    return avg_dir_deg\n",
+    "\n",
+    "def calculate_monthly_direction(df):\n",
+    "    monthly_data = df.groupby(['year', 'month'])\n",
+    "    monthly_dirs = []\n",
+    "\n",
+    "    for (year, month), group in monthly_data:\n",
+    "        avg_dir = average_wind_direction(group['wddir'])\n",
+    "        monthly_dirs.append({\n",
+    "            'year': year,\n",
+    "            'month': month,\n",
+    "            'avg_wddir': avg_dir,\n",
+    "            'count': len(group)\n",
+    "        })\n",
+    "    monthly_df = pd.DataFrame(monthly_dirs)\n",
+    "\n",
+    "    return monthly_df\n",
+    "\n",
+    "# Helper function to convert degrees to cardinal directions\n",
+    "def get_direction_name(degrees):\n",
+    "    dirs = ['N', 'NNE', 'NE', 'ENE', 'E', 'ESE', 'SE', 'SSE',\n",
+    "            'S', 'SSW', 'SW', 'WSW', 'W', 'WNW', 'NW', 'NNW']\n",
+    "    ix = round(degrees / (360 / len(dirs))) % len(dirs)\n",
+    "    return dirs[ix]\n",
+    "\n",
+    "def process_wind_direction_files(file_list):\n",
+    "    \"\"\"Process all files and calculate monthly wind directions\"\"\"\n",
+    "    os.makedirs('data/wind_direction', exist_ok=True)\n",
+    "\n",
+    "    all_station_dirs = {}\n",
+    "    for file in file_list:\n",
+    "        try:\n",
+    "            print(f\"Processing {file}...\")\n",
+    "            df, station_name = clean_hourly_wind_direction_data(file)\n",
+    "            monthly_dirs = calculate_monthly_direction(df)\n",
+    "            monthly_dirs['station'] = station_name\n",
+    "            clean_name = station_name.lower().replace(' ', '_')\n",
+    "            output_file = f\"data/wind_direction/{clean_name}_wind_direction.csv\"\n",
+    "            monthly_dirs.to_csv(output_file, index=False)\n",
+    "            print(f\"  Saved {len(monthly_dirs)} monthly averages to {output_file}\")\n",
+    "            all_station_dirs[station_name] = monthly_dirs\n",
+    "            plt.figure(figsize=(10, 8))\n",
+    "            theta = np.deg2rad(df['wddir'])\n",
+    "            ax = plt.subplot(111, polar=True)\n",
+    "            ax.set_theta_direction(-1)\n",
+    "            ax.set_theta_zero_location('N')\n",
+    "            bins = np.linspace(0, 2*np.pi, 37)\n",
+    "            counts, _ = np.histogram(theta, bins=bins)\n",
+    "            counts = counts / counts.sum() * 100\n",
+    "            ax.bar(bins[:-1], counts, width=bins[1]-bins[0], alpha=0.8)\n",
+    "            plt.title(f'Wind Direction Distribution - {station_name}')\n",
+    "            plt.savefig(f\"data/wind_direction/{clean_name}_direction_rose.png\", dpi=300, bbox_inches='tight')\n",
+    "            plt.close()\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing {file}: {str(e)}\")\n",
+    "\n",
+    "    return all_station_dirs\n",
+    "\n",
+    "hourly_files = [\n",
+    "    'data/wind_raw/wind_hourly_direction/shannon_airport_clare_hourly.csv',\n",
+    "    'data/wind_raw/wind_hourly_direction/ballyhaise_cavan_hourly.csv',\n",
+    "    'data/wind_raw/wind_hourly_direction/dunsany_meath_hourly.csv',\n",
+    "    'data/wind_raw/wind_hourly_direction/oak_park_carlow_hourly.csv',\n",
+    "    'data/wind_raw/wind_hourly_direction/knock_airport_mayo_hourly.csv',\n",
+    "\n",
+    "\n",
+    "]\n",
+    "\n",
+    "all_station_dirs = process_wind_direction_files(hourly_files)\n",
+    "if all_station_dirs:\n",
+    "    for station_name, df in all_station_dirs.items():\n",
+    "        print(f\"\\n{station_name} Average Wind Direction:\")\n",
+    "        overall_avg = average_wind_direction(df['avg_wddir'])\n",
+    "        print(f\"Overall average direction: {overall_avg:.1f}° ({get_direction_name(overall_avg)})\")\n",
+    "        df['season'] = df['month'].apply(lambda m:\n",
+    "            'Winter' if m in [12, 1, 2] else\n",
+    "            'Spring' if m in [3, 4, 5] else\n",
+    "            'Summer' if m in [6, 7, 8] else 'Autumn')\n",
+    "        seasonal_avgs = df.groupby('season').apply(\n",
+    "            lambda x: average_wind_direction(x['avg_wddir']))\n",
+    "\n",
+    "        print(\"\\nSeasonal Average Directions:\")\n",
+    "        for season, avg in seasonal_avgs.items():\n",
+    "            print(f\"{season}: {avg:.1f}° ({get_direction_name(avg)})\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
