add substation data

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -641,7 +641,6 @@
     "\n",
     "    return monthly_df\n",
     "\n",
-    "# Helper function to convert degrees to cardinal directions\n",
     "def get_direction_name(degrees):\n",
     "    dirs = ['N', 'NNE', 'NE', 'ENE', 'E', 'ESE', 'SE', 'SSE',\n",
     "            'S', 'SSW', 'SW', 'WSW', 'W', 'WNW', 'NW', 'NNW']\n",
@@ -649,7 +648,6 @@
     "    return dirs[ix]\n",
     "\n",
     "def process_wind_direction_files(file_list):\n",
-    "    \"\"\"Process all files and calculate monthly wind directions\"\"\"\n",
     "    os.makedirs('data/wind_direction', exist_ok=True)\n",
     "\n",
     "    all_station_dirs = {}\n",
@@ -708,6 +706,111 @@
     "        print(\"\\nSeasonal Average Directions:\")\n",
     "        for season, avg in seasonal_avgs.items():\n",
     "            print(f\"{season}: {avg:.1f}° ({get_direction_name(avg)})\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, to assess economic viability - need to get the distance to the grid since that is a major cost. Assuming these will all be on the larger scale of wind farms (400kvh+). Data was acquired from the ESB ECR (Embedded Capacity Registrar) and I will compare based on the euclidean distance (best case) to assess the economic viabiliy which will serve as a best guess."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import math\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "SUBSTATION_DATA_FILE = 'data/substations/substations.json'\n",
+    "RESULTS_OUTPUT_FILE = 'data/substations/substation_proximity_results.csv'\n",
+    "MIN_AVAILABLE_GENERATION_MW = 100\n",
+    "SUITABLE_VOLTAGES_KV = ['110 kV', '220 kV', '400 kV']\n",
+    "\n",
+    "sites = {\n",
+    "    \"Ballyhaise\": (54.05139, -7.30972),\n",
+    "    \"Dunsany\": (53.51583, -6.66),\n",
+    "    \"Knock Airport\": (53.90611, -8.81722),\n",
+    "    \"Oak Park\": (52.86111, -6.91528),\n",
+    "    \"Shannon Airport\": (52.69028, -8.91806),\n",
+    "}\n",
+    "\n",
+    "def haversine(lat1, lon1, lat2, lon2):\n",
+    "    lon1, lat1, lon2, lat2 = map(math.radians, [lon1, lat1, lon2, lat2])\n",
+    "    dlon = lon2 - lon1\n",
+    "    dlat = lat2 - lat1\n",
+    "    a = math.sin(dlat/2)**2 + math.cos(lat1) * math.cos(lat2) * math.sin(dlon/2)**2\n",
+    "    c = 2 * math.asin(math.sqrt(a))\n",
+    "    r = 6371\n",
+    "    return c * r\n",
+    "\n",
+    "def clean_voltage(voltage_str):\n",
+    "    if voltage_str is None:\n",
+    "        return None\n",
+    "    cleaned = str(voltage_str).replace(' ', '').lower()\n",
+    "    if 'kv' in cleaned and not ' kv' in cleaned:\n",
+    "         cleaned = cleaned.replace('kv', ' kv')\n",
+    "    num_part = ''.join(filter(str.isdigit, cleaned))\n",
+    "    if num_part:\n",
+    "        return f\"{num_part} kV\"\n",
+    "    return str(voltage_str)\n",
+    "\n",
+    "results = []\n",
+    "substation_data = []\n",
+    "suitable_substations = []\n",
+    "os.makedirs(os.path.dirname(SUBSTATION_DATA_FILE), exist_ok=True)\n",
+    "if os.path.exists(SUBSTATION_DATA_FILE):\n",
+    "    with open(SUBSTATION_DATA_FILE, 'r') as f:\n",
+    "        substation_data = json.load(f)\n",
+    "\n",
+    "if substation_data:\n",
+    "    for sub in substation_data:\n",
+    "        lat = float(sub.get('latitude', 0))\n",
+    "        lon = float(sub.get('longitude', 0))\n",
+    "        available_mw = float(sub.get('generation_available_mw', 0))\n",
+    "        primary_kv_cleaned = clean_voltage(sub.get('primary_kv'))\n",
+    "\n",
+    "        if (available_mw >= MIN_AVAILABLE_GENERATION_MW and\n",
+    "            primary_kv_cleaned in SUITABLE_VOLTAGES_KV and\n",
+    "            lat != 0 and lon != 0):\n",
+    "            suitable_substations.append({\n",
+    "                'name': sub.get('name', 'Unknown'),\n",
+    "                'latitude': lat,\n",
+    "                'longitude': lon,\n",
+    "                'primary_kv': primary_kv_cleaned,\n",
+    "                'available_mw': available_mw\n",
+    "            })\n",
+    "\n",
+    "if suitable_substations:\n",
+    "    for site_name, (site_lat, site_lon) in sites.items():\n",
+    "        nearest_sub = None\n",
+    "        min_distance = float('inf')\n",
+    "\n",
+    "        for sub in suitable_substations:\n",
+    "            distance = haversine(site_lat, site_lon, sub['latitude'], sub['longitude'])\n",
+    "            if distance < min_distance:\n",
+    "                min_distance = distance\n",
+    "                nearest_sub = sub\n",
+    "\n",
+    "        if nearest_sub:\n",
+    "            results.append({\n",
+    "                'Site': site_name,\n",
+    "                'Nearest Substation': nearest_sub['name'],\n",
+    "                'Distance (km)': round(min_distance, 2),\n",
+    "                'Substation Voltage': nearest_sub['primary_kv'],\n",
+    "                'Available Capacity (MW)': round(nearest_sub['available_mw'], 2),\n",
+    "            })\n",
+    "\n",
+    "if results:\n",
+    "    os.makedirs(os.path.dirname(RESULTS_OUTPUT_FILE), exist_ok=True)\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    results_df = results_df.sort_values(by='Distance (km)')\n",
+    "    results_df.to_csv(RESULTS_OUTPUT_FILE, index=False)\n",
     "\n"
    ]
   }
